Added functionality for all the GUI buttons, as well as adjusted page(temporary fix)

--- a/src/styles/SpotifySongs.css
+++ b/src/styles/SpotifySongs.css
@@ -1,7 +1,11 @@
+.main{
+    margin-bottom: 5%;
+}
+
 .trackTable{
     display:flex;
     border: solid black 2px;
-    margin-bottom: 5px
+    margin-bottom: 5px;
 }
 
 .playButton{
