--- a/src/styles/SpotifySongs.css
+++ b/src/styles/SpotifySongs.css
@@ -1,5 +1,5 @@
 .main{
-    margin-bottom: 5%;
+    margin-bottom: 100px;
 }
 
 .trackTable{
@@ -33,8 +33,8 @@
     align-items: center;
     width: 100vw;
     justify-content: center;
-    top: 90%;
-    height: 10%;
+    bottom: 0px;
+    height: 100px;
     position: fixed;
     display: flex;
 }
