added tailwind and dropdown menu for selectable columns to filter (they dont filter yet)

--- a/Client/src/styles/Database.css
+++ b/Client/src/styles/Database.css
@@ -51,4 +51,12 @@
 .userInputFilter{
     margin-bottom: 5px;
     float:left;
+    background-color: gray;
+}
+
+.columnFilter{
+    margin-bottom: 5px;
+    margin-left: 5px;
+    float:left;
+    background-color: lightgray;
 }
